# filter_study

./: .clang-format  .gitignore  CMakeLists.txt
pose_diff/: CMakeLists.txt
pose_diff/include/: matrix.h  point_to_plane_icp.h  point_to_point_icp.h  rotation.h  state.h  transform.h
pose_diff/include/core/: rotation.h  state.h
pose_diff/src/: main.cpp  point_to_plane_icp.cpp  point_to_point_icp.cpp
